Poor Performance with UseNUMA when cpu and memory nodes are misaligned

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 25
    • Affects Version/s: 11, 17, 21, 23
    • Component/s: hotspot
    • None
    • gc
    • b04

      UseNUMA does not check which cpu nodes are bound to the JVM processes before spreading the Java heap across regions for each node.

      If the JVM isn't allowed to run on all of the nodes (by numactl, cgroups, docker, etc), then a significant fraction of the Java heap will be unusable, causing early GC.

      This was seen on linux aarch64, using ParallelGC, but this doesn't look aarch64-specific. This is in JDK 9 /10 (probably always).

      For both linux and BSD, the numa_interleave_memory() function explicitly interleaves across "numa_all_nodes".

            Assignee:
            Swati Sharma
            Reporter:
            Derek White
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: